# search-curator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  check.sh  config.example.toml  config.test.toml  docker-compose.yml  logging.ini  package-lock.json  package.json  pyproject.toml  sitecustomize.py  streamlit.sh  tsconfig.json
.claude/: settings.json
.claude/hooks/: check-gate.sh
.githooks/: pre-commit
.github/workflows/: check.yml
.run/: expand-run.run.xml  extract-analyse.run.xml  fetch-search.js.run.xml  run-extract.js.run.xml  run.run.xml
.streamlit/: config.toml
app/tui/: App.jsx  CLAUDE.md  DislikeReasonInput.jsx  actions.js  bindings.js  index.jsx  useKeymap.js
app/tui/screens/: Details.jsx  Keys.jsx  Progress.jsx  QueryEditor.jsx  Results.jsx  screen.js
docs/: README.md  adapters.md  architecture.md  auth.md  config.md  configuration.md  contributing.md  deployment.md  env.md  eval.md  examples.md  guardrails.md  logging.md  observability.md  pipeline.md  preferences.md  prompts.md  storage.md  strategies.md  telegram.md
docs/apps/: tui.md
docs/concepts/: entity-resolution.md  reciprocal-rank-fusion.md  taste-vectors.md
eval/: CLAUDE.md  README.md  config.js
eval/core/: cli.js  ctx.js  fixtures.js  matching.js  metrics.js  queryHeuristics.js  report.js  runs.js  slug.js
eval/fixtures/: standup-comedy-in-russian__berlin__90d-from-2026-05-03.search.json
eval/scripts/: fetch-search.js  promote-golden.js  run-expand.js  run-extract.js
eval/scripts/expand/: grid.js  index.js  report.js  runner.js  types.js
eval/scripts/extract/: analyse.js  helpers.js  index.js  report.js  runner.js  types.js
examples/: _stubs.js  script.js
examples/tui/: App.jsx  actions.js  config.js  keys.js
examples/tui/screens/: Details.jsx  Keys.jsx  Progress.jsx  QueryEditor.jsx  Results.jsx  SavedQueries.jsx  Search.jsx  screen.js
scripts/: deploy.sh  events-curator-deploy.service  events-curator-deploy.timer
src/: index.js
src/adapters/llm/: openai.js
src/adapters/storage/: indexeddb.js  memory.js  scope.js  sqlite.js
src/core/: config.js  context.js  eventState.js  pipeline.js  pricing.js  progress.js  types.js
src/events_curator/: __init__.py  config.py  enums.py
src/events_curator/apps/: __init__.py  server.py  streamlit_app.py  telegram_bot.py
src/events_curator/auth/: __init__.py
src/events_curator/dedup/: __init__.py  _golden.py  _judge.py  _match.py  _state.py
src/events_curator/embed/: __init__.py  openai_embed.py  sentence_transformer.py
src/events_curator/eval/: __init__.py  metrics.py  protocols.py  report.py  runner.py
src/events_curator/llm/: __init__.py  (+1 more)
src/prompts/: _system.js  dedupeJudge.js  derivePreferenceTraits.js  expandQueries.js  extractEvents.js  index.js  rankByPreference.js
src/stages/: dedupe.js  discover.js  extract.js  feedback.js  rank.js
test/: _helpers.js  config.test.js  dedupe.test.js  discover.test.js  filter.test.js  matching.test.js  pipeline_e2e.test.js  queryExpansion.test.js  rank.test.js  rules.test.js  storage_memory.test.js  storage_sqlite.test.js
tests/: conftest.py  test_attributes.py  test_auth.py  test_bot_schedule.py  test_bot_service.py  test_builder.py  test_classify.py  test_config.py  test_dedup.py  test_dedup_corpus.py  test_embed_bge.py  test_embed_openai.py  test_eval.py  test_expand.py  test_feedback.py  test_llm_openai.py  test_merge.py  test_models.py  test_pipeline.py  test_rank.py  test_results_view.py  test_search.py  test_search_builder.py  test_search_openai.py  test_storage_memory.py  test_storage_sqlite.py  test_telegram_render.py
tests/fixtures/: dedup_raw_results.json
(+59 files in other folders)
