[project]
name = "events-curator"
version = "0.0.0"
description = "AI-curated upcoming events: pluggable search, dedup, storage, and per-query personalized ranking."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "streamlit>=1.58.0",
]

# Real adapters pull heavy deps. They are NOT needed for the skeleton's
# type/lint/test gate — concrete adapters are stubs until implemented. Install an
# extra only when you wire up that adapter for real.
[project.optional-dependencies]
llm = ["openai>=1.40"]
embed = ["sentence-transformers>=3.0"]
store = ["sqlite-vec>=0.1.1"]
bot = ["aiogram>=3.7"]

[project.scripts]
events-curator = "events_curator.apps.server:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.6",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/events_curator"]

# ---------------------------------------------------------------------------
# Type checking — strict everywhere. The Streamlit view is an untyped-UI shim
# and is excluded (its only job is to read the DB and draw widgets).
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "src/events_curator/apps/streamlit_app.py"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# ---------------------------------------------------------------------------
# Lint + format. Complexity/size caps (guardrails) are enforced here:
#   C90 = mccabe complexity, PLR0912 = branches, PLR0915 = statements.
# Per-file max line count is enforced separately in check.sh.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C90", "PL", "RUF", "ASYNC", "TID"]
ignore = ["PLR0913"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 40

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "PLR0913"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

# ---------------------------------------------------------------------------
# Module boundaries (guardrails): a layered architecture. A layer may import
# only layers below it; modules sharing a layer (joined by " | ") are mutually
# independent. This is the machine-checked form of "sealed modules, no cycles".
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "events_curator"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "events_curator.apps",
    "events_curator.eval",
    "events_curator.pipeline",
    "events_curator.expand | events_curator.search | events_curator.merge | events_curator.dedup | events_curator.rank | events_curator.feedback",
    "events_curator.storage | events_curator.auth | events_curator.llm | events_curator.embed",
    "events_curator.models",
    "events_curator.config",
    "events_curator.enums",
]
